--- a/css/main2.css
+++ b/css/main2.css
@@ -63,7 +63,7 @@ body {
 
 .tier1 .hours-sign {
 	width: 50%;
-	float:right;
+	float:left;
 	letter-spacing: .05em;
 	margin-bottom: 0px;
 	overflow: hidden;
@@ -82,7 +82,7 @@ body {
 
 
 .tier1 .search {
-	margin-top: 200px;
+	margin-top: 180px;
 	padding-top: 50px;
 	float: left;
 	font-size: .75em;
@@ -92,15 +92,16 @@ body {
 .tier1 .login {
 	float: right;
 	background: black;
-	padding: 30px;
 	font-size: .75em;
+	padding-top: 50px;
+	margin: 0px;
 }
 
 .tier1 input[type="text"] {
   padding: 10px;
   border: none;
   font-family: sans-serif;
-  font-size: .75em;
+  font-size: 1em;
   appearance: none;
   box-shadow: none;
   border-radius: none;
@@ -109,12 +110,11 @@ body {
 
 }
 
-.tier1 input[type="text"]:focus,
-.tier1 input[type="text"].focus {
+.tier1 input[type="text"]:focus {
   border: none;
   height: auto;
   box-shadow: none;
-  font-size: 1em;
+  font-size: 1.5em;
   appearance: none;
   outline: none;
 }
